# QT_Projects

./: README.md
XVideo/: XVideo.pro  XVideo.pro.user.ddd2f6d.4.8-pre1  filter.cpp  filter.h  imagepro.cpp  imagepro.h  main.cpp  resource.qrc  videothread.cpp  videothread.h  videowidget.cpp  videowidget.h  xvideo.cpp  xvideo.h  xvideo.ui  样式表.txt
lib/SDL2/2.30.2/: INSTALL_RECEIPT.json
lib/SDL2/2.30.2/lib/: libSDL2-2.0.0.dylib
lib/ffmpeg/: INSTALL_RECEIPT.json
lib/ffmpeg/.brew/: ffmpeg.rb
lib/ffmpeg/lib/: libavcodec.61.dylib  libavdevice.61.1.100.dylib  libavdevice.61.dylib  libavfilter.10.1.100.dylib  libavfilter.dylib  libavformat.61.1.100.dylib  libavformat.61.dylib  libavutil.59.8.100.dylib  libavutil.59.dylib  libpostproc.58.1.100.dylib  libpostproc.58.dylib  libswresample.5.1.100.dylib  libswresample.dylib  libswscale.8.1.100.dylib  libswscale.dylib
lib/ffmpeg/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
lib/ffmpeg/share/man/man1/: ffmpeg-all.1  ffmpeg-codecs.1
testFFMPEG/: CMakeLists.txt  main.cpp
testFFMPEG1/: main.cpp  testFFMPEG1.pro
